--- a/vignettes/qiime2.Rmd
+++ b/vignettes/qiime2.Rmd
@@ -1,18 +1,23 @@
 ---
 title: "qiime2 pipeline"
 output: html_document
-date: "2022-09-01"
+vignette: >
+  %\VignetteIndexEntry{qiime2}
+  %\VignetteEncoding{UTF-8}
+  %\VignetteEngine{knitr::rmarkdown}
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, eval=FALSE)
 library(aquaman)
 library(kraken)
 ```
 
 ## Assign Taxa
 
-Run the qiime2 bash file on MacOS or Linux. Recommend Windows Subsystem for Linux (WSL) if on Windows machine. This script requires the installation of qiime2 and conda libraries. 
+Run the qiime2 bash file on MacOS or Linux. Recommend Windows Subsystem for Linux (WSL) if on Windows machine. This script requires the installation of qiime2 and conda libraries.
 
 Additionally, need to update script to provide a path to directory containing .fastq files from Illumina instrument.
 
@@ -39,7 +44,6 @@ taxa <- import_qiime2(path = "")
 
 ```
 
-
 ## Calculate IQI
 
 ```{r}
@@ -47,7 +51,6 @@ taxa <- import_qiime2(path = "")
 iqi_score <- iqi(taxa)
 
 ```
-
 
 ## Import Survey
 
@@ -58,12 +61,13 @@ survey <- import_survey(path = "")
 
 ```
 
-## Merge taxa, survey, iqi scores
+## Prepare
+
+Merge taxa, survey, iqi scores.
 
 ```{r}
 data <- inner_join(survey, iqi_score, taxa)
 ```
-
 
 ## Calculate Area
 
@@ -72,5 +76,3 @@ data <- inner_join(survey, iqi_score, taxa)
 area <- assess(data)
 
 ```
-
-
